# RemoteCam-Android

./: settings.gradle.kts
app/: build.gradle.kts
app/release/: output-metadata.json
app/src/androidTest/java/maxsimus/RemoteCam/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JniMethods.cpp  NetworkImageStream.cpp  NetworkImageStream.h
app/src/main/java/maxsimus/RemoteCam/: BroadcastListener.java  CameraController.java  CameraInfo.java  CameraService.java  CameraSessionStateCallback.java  ImageProcessingThreadFactory.java  ImageProcessor.java  MainActivity.kt  NativeImageProcessor.java  RemoteControlService.java  ServerFoundCallback.java
app/src/main/proto/: helloworld.proto
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/maxsimus/RemoteCam/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
